--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             <li><a href="ipv6.html"> IP Version 6</a></li>   
             <li><a href="modulus.html"> Modulus Math</a></li> 
             <li><a href="nat.html"> NAT Translation</a></li>
+            <li><a href="osi.html"> OSI Model Flashcards</a></li>
             <li><a href="password.html"> Password Strength Analyzer</a></li>
             <li><a href="prime.html"> Prime Number Test</a></li> 
             <li><a href="primes.html"> Prime Number Generator</a></li> 
