--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <li><a href="firewall.html"> Stateful Firewall Simulator</a></li>
             <li><a href="flashcard.html"> Flashcards</a></li>
             <li><a href="hash.html"> Hashing Calculator</a></li>
-            <li><a href="ipv6.html"> IP Version 6</a></li>   
+            <li><a href="ipv6compression.html"> IP Version 6 Compression</a></li>   
             <li><a href="modulus.html"> Modulus Math</a></li> 
             <li><a href="nat.html"> NAT Translation</a></li>
             <li><a href="osi.html"> OSI Model Flashcards</a></li>
