--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <main>
         <ul>
             <li><a href="acl.html"> Access Control List Generator</a></li>
-            <li><a href="aes.html"> Access Control List Generator</a></li>
+            <li><a href="aes.html"> AES Symmetrical Encryption</a></li>
             <li><a href="atod.html"> Analog to Digital</a></li>
             <li><a href="asymmetrical.html"> Asymmetrical Encryption Tool</a></li>
             <li><a href="attackgame.html"> Cyber Attack Game</a></li>
