--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <li><a href="ipv6compression.html"> IP Version 6 Compression</a></li>   
             <li><a href="modulus.html"> Modulus Math</a></li> 
             <li><a href="nat.html"> NAT Translation</a></li>
+            <li><a href="washer.html"> Open Loop Control - Washing Machine</a></li>
             <li><a href="osi.html"> OSI Model Flashcards</a></li>
             <li><a href="password.html"> Password Strength Analyzer</a></li>
             <li><a href="prime.html"> Prime Number Test</a></li> 
