--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <li><a href="diffie.html"> Diffie-Hellman Key Exchange Color Simulation</a></li>
             <li><a href="firewall.html"> Stateful Firewall Simulator</a></li>
             <li><a href="flashcard.html"> Flashcards</a></li>
+            <li><a href="closedloop.html"> Closed Loop Control - HVAC System</a></li>
             <li><a href="hash.html"> Hashing Calculator</a></li>
             <li><a href="ipv6compression.html"> IP Version 6 Compression</a></li>   
             <li><a href="modulus.html"> Modulus Math</a></li> 
