--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <li><a href="password.html"> Password Strength Analyzer</a></li>
             <li><a href="prime.html"> Prime Number Test</a></li> 
             <li><a href="primes.html"> Prime Number Generator</a></li> 
+            <li><a href="proportional.html"> Proportional Control Paint Booth Oven</a></li> 
             <li><a href="protocols.html"> Protocol List</a></li> 
             <li><a href="rsa.html"> Using RSA to Generate Asymmetrical Keys</a></li>
             <li><a href="rsacalc.html"> Calculating Asymmetrical Keys with RSA</a></li>
