--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <li><a href="washer.html"> Open Loop Control - Washing Machine</a></li>
             <li><a href="osi.html"> OSI Model Flashcards</a></li>
             <li><a href="password.html"> Password Strength Analyzer</a></li>
+            <li><a href="pid.html"> PID Controls - Flaps on a Commercial Airliner</a></li> 
             <li><a href="prime.html"> Prime Number Test</a></li> 
             <li><a href="primes.html"> Prime Number Generator</a></li> 
             <li><a href="proportional.html"> Proportional Control Paint Booth Oven</a></li> 
