--- a/applicability.html
+++ b/applicability.html
@@ -19,21 +19,26 @@
         .title {
             text-align: center;
             color: #c00;
-            font-size: 24px;
+            font-size: 22px;
+            margin-bottom: 20px;
+        }
+        .domain-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
             margin-bottom: 20px;
         }
         .domain-button {
-            display: block;
-            width: 100%;
+            width: 1.5in;
             background-color: #000;
             color: #fff;
-            padding: 15px;
-            margin-top: 10px;
+            padding: 10px;
+            margin: 5px;
             border: none;
             cursor: pointer;
-            text-align: left;
+            text-align: center;
             border-radius: 5px;
-            font-size: 18px;
+            font-size: 14px;
         }
         .domain-button:hover {
             background-color: #333;
@@ -46,7 +51,7 @@
         .capability-button {
             background-color: #666;
             color: #fff;
-            padding: 10px;
+            padding: 8px;
             margin-top: 5px;
             border: none;
             cursor: pointer;
@@ -54,6 +59,7 @@
             border-radius: 5px;
             width: 90%;
             position: relative;
+            font-size: 12px;
         }
         .capability-button:hover {
             background-color: #555;
@@ -66,7 +72,7 @@
         .practice-button {
             background-color: #c00;
             color: #fff;
-            padding: 10px;
+            padding: 8px;
             margin: 5px 0;
             border: none;
             cursor: pointer;
@@ -74,6 +80,7 @@
             border-radius: 3px;
             width: 85%;
             position: relative;
+            font-size: 12px;
         }
         .practice-button:hover {
             background-color: #a00;
@@ -82,6 +89,7 @@
             display: none;
             margin-top: 5px;
             margin-left: 20px;
+            font-size: 12px;
         }
         .checkboxes label {
             margin-right: 15px;
@@ -93,12 +101,11 @@
 <div class="container">
     <div class="title">NIST SP 800-171 Applicability Study</div>
     
-    <div id="domains-container"></div>
+    <div class="domain-container" id="domains-container"></div>
 
 </div>
 
 <script>
-    // JSON structure representing the domains, capabilities, and practices
     const nistData = {
         "domains": [
             {
