--- a/applicability.html
+++ b/applicability.html
@@ -13,8 +13,9 @@
             padding: 20px;
         }
         .container {
-            width: 80%;
+            width: 100%;
             margin: 0 auto;
+            overflow-x: auto; /* Ensure the content fits horizontally */
         }
         .title {
             text-align: center;
@@ -24,12 +25,14 @@
         }
         .domain-container {
             display: flex;
-            flex-wrap: wrap;
             justify-content: space-between;
+            flex-wrap: nowrap; /* Prevent wrapping to ensure all buttons are in one row */
             margin-bottom: 20px;
         }
         .domain-button {
-            width: 1.5in;
+            flex: 1;
+            max-width: calc(100% / 17); /* Ensure each button takes up equal space */
+            min-width: 50px; /* Minimum width to keep the buttons readable */
             background-color: #000;
             color: #fff;
             padding: 10px;
@@ -38,7 +41,7 @@
             cursor: pointer;
             text-align: center;
             border-radius: 5px;
-            font-size: 14px;
+            font-size: 12px;
         }
         .domain-button:hover {
             background-color: #333;
