--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li><a href="beam.html"> Beam Algorithm Simulator</a></li>
             <li><a href="binary.html"> Binary Game</a></li>
             <li><a href="caesar.html"> Caesar Cipher Tool</a></li>
-            <li><a href="CMMC.html"> CMMC Level Inventory</a></li>
+            <li><a href="cmmc.html"> CMMC Level Inventory</a></li>
             <li><a href="cve.html"> CVE Database Search</a></li>
             <li><a href="dora.html"> DHCP Simulation Tool</a></li>
             <li><a href="diffie.html"> Diffie-Hellman Key Exchange Color Simulation</a></li>
