--- a/cmmc.html
+++ b/cmmc.html
@@ -138,6 +138,7 @@
                 "capabilities": [
                     {
                         "id": "AC01",
+                        "description": "Limit system access to authorized users and the types of transactions/functions that authorized users are permitted to execute.",
                         "level": 1,
                         "practices": [
                             {
@@ -154,6 +155,7 @@
                     },
                     {
                         "id": "AC02",
+                        "description": "Control the flow of CUI in accordance with approved authorizations.",
                         "level": 2,
                         "practices": [
                             {
@@ -165,6 +167,7 @@
                     },
                     {
                         "id": "AC03",
+                        "description": "Use mechanisms to protect information during transmissions and ensure data integrity.",
                         "level": 3,
                         "practices": [
                             {
@@ -186,6 +189,7 @@
                 "capabilities": [
                     {
                         "id": "AT01",
+                        "description": "Ensure personnel are trained and aware of the security risks and policies.",
                         "level": 1,
                         "practices": [
                             {
@@ -197,6 +201,7 @@
                     },
                     {
                         "id": "AT02",
+                        "description": "Provide training for incident response to personnel.",
                         "level": 2,
                         "practices": [
                             {
@@ -213,6 +218,7 @@
                 "capabilities": [
                     {
                         "id": "AU01",
+                        "description": "Create, protect, and retain audit records to establish events and identify individuals associated with those events.",
                         "level": 1,
                         "practices": [
                             {
@@ -224,6 +230,7 @@
                     },
                     {
                         "id": "AU02",
+                        "description": "Protect and retain audit records from unauthorized access, modification, and deletion.",
                         "level": 2,
                         "practices": [
                             {
@@ -235,6 +242,7 @@
                     },
                     {
                         "id": "AU03",
+                        "description": "Generate audit events for monitoring and control.",
                         "level": 3,
                         "practices": [
                             {
@@ -251,6 +259,7 @@
                 "capabilities": [
                     {
                         "id": "CM01",
+                        "description": "Establish and maintain baseline configurations for information systems.",
                         "level": 1,
                         "practices": [
                             {
@@ -262,6 +271,7 @@
                     },
                     {
                         "id": "CM02",
+                        "description": "Develop and maintain configuration control and documentation.",
                         "level": 2,
                         "practices": [
                             {
@@ -273,6 +283,7 @@
                     },
                     {
                         "id": "CM03",
+                        "description": "Restrict, disable, or prevent the use of nonessential programs, ports, and services.",
                         "level": 3,
                         "practices": [
                             {
@@ -294,6 +305,7 @@
                 "capabilities": [
                     {
                         "id": "IA01",
+                        "description": "Identify and authenticate users, processes, and devices before granting access.",
                         "level": 1,
                         "practices": [
                             {
@@ -305,6 +317,7 @@
                     },
                     {
                         "id": "IA02",
+                        "description": "Use multifactor authentication for access to privileged and non-privileged accounts.",
                         "level": 2,
                         "practices": [
                             {
@@ -321,6 +334,7 @@
                 "capabilities": [
                     {
                         "id": "IR01",
+                        "description": "Establish incident-handling capabilities for organizational information systems.",
                         "level": 1,
                         "practices": [
                             {
@@ -332,6 +346,7 @@
                     },
                     {
                         "id": "IR02",
+                        "description": "Track, document, and report incidents to appropriate officials.",
                         "level": 2,
                         "practices": [
                             {
@@ -343,6 +358,7 @@
                     },
                     {
                         "id": "IR03",
+                        "description": "Perform root cause analysis on incidents and take corrective actions.",
                         "level": 3,
                         "practices": [
                             {
@@ -359,6 +375,7 @@
                 "capabilities": [
                     {
                         "id": "MA01",
+                        "description": "Perform periodic and timely maintenance on information systems.",
                         "level": 1,
                         "practices": [
                             {
@@ -370,6 +387,7 @@
                     },
                     {
                         "id": "MA02",
+                        "description": "Control maintenance activities, tools, and personnel with access to the information system.",
                         "level": 2,
                         "practices": [
                             {
@@ -386,6 +404,7 @@
                 "capabilities": [
                     {
                         "id": "MP01",
+                        "description": "Protect information system media containing CUI during transport and storage.",
                         "level": 1,
                         "practices": [
                             {
@@ -397,6 +416,7 @@
                     },
                     {
                         "id": "MP02",
+                        "description": "Sanitize media before disposal or reuse.",
                         "level": 2,
                         "practices": [
                             {
@@ -413,6 +433,7 @@
                 "capabilities": [
                     {
                         "id": "PS01",
+                        "description": "Screen individuals prior to authorizing access to systems containing CUI.",
                         "level": 1,
                         "practices": [
                             {
@@ -424,6 +445,7 @@
                     },
                     {
                         "id": "PS02",
+                        "description": "Terminate access when personnel are terminated or transferred.",
                         "level": 2,
                         "practices": [
                             {
@@ -440,6 +462,7 @@
                 "capabilities": [
                     {
                         "id": "PE01",
+                        "description": "Limit physical access to systems, equipment, and environments to authorized individuals.",
                         "level": 1,
                         "practices": [
                             {
@@ -451,6 +474,7 @@
                     },
                     {
                         "id": "PE02",
+                        "description": "Escort visitors and monitor visitor activity.",
                         "level": 2,
                         "practices": [
                             {
@@ -467,6 +491,7 @@
                 "capabilities": [
                     {
                         "id": "RA01",
+                        "description": "Identify and assess risk to operations, assets, and individuals.",
                         "level": 1,
                         "practices": [
                             {
@@ -478,6 +503,7 @@
                     },
                     {
                         "id": "RA02",
+                        "description": "Perform vulnerability scans periodically and when new vulnerabilities are identified.",
                         "level": 2,
                         "practices": [
                             {
@@ -494,6 +520,7 @@
                 "capabilities": [
                     {
                         "id": "CA01",
+                        "description": "Develop, document, and periodically update security plans and policies.",
                         "level": 1,
                         "practices": [
                             {
@@ -505,6 +532,7 @@
                     },
                     {
                         "id": "CA02",
+                        "description": "Assess and monitor security controls on an ongoing basis.",
                         "level": 2,
                         "practices": [
                             {
@@ -521,6 +549,7 @@
                 "capabilities": [
                     {
                         "id": "SC01",
+                        "description": "Monitor, control, and protect organizational communications at system boundaries.",
                         "level": 1,
                         "practices": [
                             {
@@ -532,6 +561,7 @@
                     },
                     {
                         "id": "SC02",
+                        "description": "Implement cryptographic protections to protect CUI during transmission.",
                         "level": 2,
                         "practices": [
                             {
@@ -548,6 +578,7 @@
                 "capabilities": [
                     {
                         "id": "SI01",
+                        "description": "Identify, report, and correct information system flaws.",
                         "level": 1,
                         "practices": [
                             {
@@ -559,6 +590,7 @@
                     },
                     {
                         "id": "SI02",
+                        "description": "Provide protection from malicious code at appropriate locations.",
                         "level": 2,
                         "practices": [
                             {
@@ -570,6 +602,7 @@
                     },
                     {
                         "id": "SI03",
+                        "description": "Perform periodic system scans and real-time scans of files from external sources.",
                         "level": 3,
                         "practices": [
                             {
@@ -609,10 +642,11 @@
             domainSection.appendChild(capabilitiesContainer);
 
             domain.capabilities.forEach(capability => {
-                // Create capability button with ID only
+                // Create capability button with ID and mouseover description
                 const capabilityButton = document.createElement('button');
                 capabilityButton.className = 'capability-button';
                 capabilityButton.textContent = capability.id;
+                capabilityButton.title = capability.description; // Mouseover with description
                 capabilityButton.onclick = function() {
                     togglePractices(capabilityButton);
                 };
